--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <header>
         <div class="container nav-wrapper">
             <div class="logo">
-                <h2>ÇELİKBAŞ POMPA</h2>
+                <h2>ÇELİKBAŞ POMPA ENJEKTÖR SERVİSİ</h2>
             </div>
             <nav>
                 <ul>
@@ -144,4 +144,5 @@
     </footer>
 
 </body>
+
 </html>
