--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
     
                 <div class="map-card">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48108.23933390237!2d29.2319766!3d40.9751854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cad05da26b2301%3A0x89228498877e8e52!2sSultanbeyli%2C%20Istanbul!5e0!3m2!1sen!2str!4v1684321234567!5m2!1sen!2str" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d223.96907716517327!2d29.297942132956273!3d40.951763934904854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cad114fd0add89%3A0xadca6a2ca1a986bf!2zw4dFTMSwS0JBxZ4gUE9NUEEgRU5KRUtUw5ZSIFNFUlbEsFPEsCBTVUxUQU5CRVlMxLA!5e0!3m2!1str!2str!4v1765315475690!5m2!1str!2str" width="%100" height="%100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
