--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <i class="fas fa-phone"></i>
                         <div>
                             <h4>Telefon</h4>
-                            <p><a href="tel:+905551234567" style="color:#666; text-decoration:none;">0555 123 45 67</a></p>
+                            <p><a href="tel:+90 553 726 71 92" style="color:#666; text-decoration:none;">0 553 726 71 92</a></p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -238,3 +238,4 @@
     </script>
 </body>
 </html>
+
