--- a/index.html
+++ b/index.html
@@ -101,12 +101,11 @@
             
             #hero h1 { font-size: 2rem; }
             
-            /* DÜZELTME: İletişim kutuları ve Harita */
             .contact-wrapper { flex-direction: column; }
             .info-card { width: auto; margin-bottom: 20px; }
             .map-card { 
                 width: 100%; 
-                height: 300px; /* Mobilde haritaya yükseklik ver */
+                height: 300px; 
                 min-height: 300px; 
             }
         }
@@ -146,9 +145,10 @@
         <div class="container">
             <h2 class="section-title">Hizmetlerimiz</h2>
             <div class="services-grid">
-                <div class="service-card"><span class="icon">🔧</span><h3>Enjektör Tamiri</h3><p>Bosch, Delphi ve Siemens marka enjektörlerin bilgisayarlı test ve onarımı.</p></div>
+                <div class="service-card"><span class="icon">🔧</span><h3>Enjektör Tamiri</h3><p>Bosch, Delphi, Siemens ve Denso marka enjektörlerin bilgisayarlı test ve onarımı.</p></div>
                 <div class="service-card"><span class="icon">⚙️</span><h3>Pompa Revizyonu</h3><p>Dizel pompalarınızın fabrika standartlarına göre ayarlanması ve bakımı.</p></div>
                 <div class="service-card"><span class="icon">💻</span><h3>Arıza Tespiti</h3><p>Son teknoloji cihazlarla araç arızalarının nokta atışı tespiti.</p></div>
+                <div class="service-card"><span class="icon">🚜</span><h3>İş Makineleri</h3><p>Perkins, Deutz, Cat ve ağır vasıta sistemleri için özel bakım ve onarım hizmetleri.</p></div>
             </div>
         </div>
     </section>
@@ -174,14 +174,14 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Adres</h4>
-                            <p>Sanayi Mahallesi, Örnek Caddesi No:12<br>Sultanbeyli / İstanbul</p>
+                            <p>Fatih bulvarı Akşemsettin Mah. Sim San. Sit. 2. Sk. No:9  <br>Sultanbeyli / İstanbul</p>
                         </div>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h4>Telefon</h4>
-                            <p><a href="tel:+90 553 726 71 92" style="color:#666; text-decoration:none;">0 553 726 71 92</a></p>
+                            <p><a href="tel:+905363374936" style="color:#666; text-decoration:none;">0 536 337 49 36</a></p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -238,4 +238,3 @@
     </script>
 </body>
 </html>
-
