--- a/randevu.html
+++ b/randevu.html
@@ -302,8 +302,8 @@
             btn.innerHTML = "Gönderiliyor...";
             btn.disabled = true;
 
-            const serviceID = "YOUR_SERVICE_ID";
-            const templateID = "YOUR_TEMPLATE_ID";
+            const serviceID = "service_utbs3u8";
+            const templateID = "template_4k62iti";
 
             emailjs.sendForm(serviceID, templateID, this)
                 .then(() => {
@@ -321,4 +321,5 @@
         });
     </script>
 </body>
+
 </html>
