--- a/randevu.html
+++ b/randevu.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         (function(){
             // BURAYA KENDİ PUBLIC KEY'İNİZİ YAZIN (EmailJS Panel -> Account -> Public Key)
-            emailjs.init("YOUR_PUBLIC_KEY");
+            emailjs.init("PHjPWj8tl9unncmEW");
         })();
     </script>
 
@@ -323,3 +323,4 @@
 </body>
 
 </html>
+
