--- a/randevu.html
+++ b/randevu.html
@@ -303,7 +303,7 @@
             btn.disabled = true;
 
             const serviceID = "service_utbs3u8";
-            const templateID = "template_4k62iti";
+            const templateID = "template_xef00a5";
 
             emailjs.sendForm(serviceID, templateID, this)
                 .then(() => {
@@ -323,4 +323,5 @@
 </body>
 
 </html>
+
 
