--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -121,7 +121,7 @@
             <div class="about-grid">
                 <div class="about-text">
                     <h2>20 Yıllık Sektör Tecrübesi</h2>
-                    <p>Çelikbaş Pompa Enjektör Servisi olarak, dizel yakıt sistemleri üzerine uzmanlaşmış kadromuzla İstanbul Sultanbeyli'de hizmet veriyoruz. Teknolojiyi yakından takip eden laboratuvar altyapımız ile Bosch, Delphi, Siemens ve Denso marka enjektörlerin test, tamir ve revizyon işlemlerini garantili olarak yapıyoruz.</p>
+                    <p>Çelikbaş Pompa Enjektör Servisi olarak, dizel yakıt sistemleri üzerine uzmanlaşmış kadromuzla İstanbul Sultanbeyli'de hizmet veriyoruz. Teknolojiyi yakından takip eden laboratuvar altyapımız ile Bosch, Delphi, Siemens ve Denso marka enjektörlerin test, tamir ve revizyon işlemlerini yapıyoruz.</p>
                     <p>Müşteri memnuniyetini en üst düzeyde tutmak için şeffaf fiyat politikası ve hızlı çözüm süreçleri uyguluyoruz. Aracınızın performansını fabrika standartlarına döndürmek bizim işimiz.</p>
                 </div>
                 <div class="about-img">
@@ -160,4 +160,5 @@
         });
     </script>
 </body>
+
 </html>
